Revert "Merge branch 'master' of https://github.com/AbdoNile/Foundation"
This reverts commit 63c0bed94ca46225bcc43e76fff5056fe981439f, reversing
changes made to 7485239c9b9f0c8eb3a113a45cf549304cb3e5d7.

--- a/Kafala.Web.UI/Views/Donor/Partial/DonorCommitments.cshtml
+++ b/Kafala.Web.UI/Views/Donor/Partial/DonorCommitments.cshtml
@@ -13,7 +13,16 @@
   
          @foreach (var item in Model.Commitments)
          {
-             Html.RenderPartial("Partials/CommitmentListing", item);
+             <tr>
+                 <td>@item.DonationCaseName</td>
+                 <td>@item.StartDate</td>
+                 <td>@item.EndDate</td>
+                 <td>
+                     @Html.ActionLink("Edit", "Edit", "Commitment", new {id = item.Id} , null) |
+                     @Html.ActionLink("Details", "Details", "Commitment", new {id = item.Id}, null) |
+                     @Html.ActionLink("Delete", "Delete", new {id = item.Id})
+                 </td>
+             </tr>
          }
 
      </table>
