--- a/Kafala.Web.UI/Views/Shared/Partials/CommitmentListing.cshtml
+++ b/Kafala.Web.UI/Views/Shared/Partials/CommitmentListing.cshtml
@@ -1,6 +1,7 @@
 ﻿@model Kafala.Web.ViewModels.Commitment.ViewCommitmentViewModel
 
  <tr>
+                        <td>@Model.DonationCaseName</td>
                         <td>@Model.DonorName</td>
                         <td>@Model.Amount</td>
                         <td>@Model.StartDate</td>
