--- a/Kafala.Web.UI/Views/Shared/_Layout.cshtml
+++ b/Kafala.Web.UI/Views/Shared/_Layout.cshtml
@@ -41,7 +41,9 @@
         <script src="~/Scripts/jquery-2.0.3.js"></script>
         <script src="~/Scripts/bootstrap.min.js"></script>
         <script src="~/Scripts/jquery-ui-1.10.3.js"></script>
-        <script src="~/Scripts/jquery-ui.unobtrusive-1.0.1.js"></script>
-        <script src="~/Scripts/shared.js"></script>
+         <script src="~/Scripts/jquery.validate.js"></script>
+        <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
+       <script src="~/Scripts/shared.js"></script>
+        
     </body>
 </html>
