--- a/Kafala.Web.UI/Views/Donor/Create.cshtml
+++ b/Kafala.Web.UI/Views/Donor/Create.cshtml
@@ -5,7 +5,7 @@
 <h2>Register a new donor</h2>
 @using (var form = Html.Bootstrap().BeginForm(BootstrapFormType.Horizontal, new {@class= "well validated" ,id = "autoForm" }))
 {
-    @Html.FormBuilder().DynamicForm()
+    @Html.DynamicForm()
    
 }
 
