--- a/Kafala.Web.UI/Views/Payment/Edit.cshtml
+++ b/Kafala.Web.UI/Views/Payment/Edit.cshtml
@@ -3,5 +3,5 @@
 <h2>Update Payment Details</h2>
 @using (var form = Html.Bootstrap().BeginForm(BootstrapFormType.Horizontal, new {@class= "well" ,id = "autoForm" }))
 {
-    @Html.FormBuilder().DynamicForm();
+    @Html.DynamicForm();
 }
