--- a/Kafala.Web.UI/Views/DonationCase/Create.cshtml
+++ b/Kafala.Web.UI/Views/DonationCase/Create.cshtml
@@ -3,7 +3,7 @@
 <h2>Create Donation Case</h2>
 @using (var form = Html.Bootstrap().BeginForm(BootstrapFormType.Horizontal, new {@class= "well" ,id = "autoForm" }))
 {
-    @Html.FormBuilder().DynamicForm()
+    @Html.DynamicForm()
    
 }
 
