--- a/Kafala.Web.UI/Views/PaymentPeriod/Create.cshtml
+++ b/Kafala.Web.UI/Views/PaymentPeriod/Create.cshtml
@@ -4,7 +4,7 @@
 <h2>Register Payment For Donor</h2>
 @using (var form = Html.Bootstrap().BeginForm(BootstrapFormType.Horizontal, new {@class= "well" ,id = "autoForm" }))
 {
-    @Html.FormBuilder().DynamicForm();
+    @Html.DynamicForm();
 }
 
 
