--- a/Kafala.Web.UI/Views/PaymentPeriod/View.cshtml
+++ b/Kafala.Web.UI/Views/PaymentPeriod/View.cshtml
@@ -2,5 +2,5 @@
 <h2>Payment Details</h2>
 @using (var form = Html.Bootstrap().BeginForm(BootstrapFormType.Horizontal, new {@class= "well" ,id = "autoForm" }))
 {
-    @Html.FormBuilder().DynamicView()
+    @Html.DynamicView()
 }
