updates to paging

--- a/Kafala.Web.UI/Views/Commitment/View.cshtml
+++ b/Kafala.Web.UI/Views/Commitment/View.cshtml
@@ -1,5 +1,4 @@
-﻿@using BootstrapFormType = Foundation.FormBuilder.DynamicForm.BootstrapFormType
-@model Kafala.Web.ViewModels.Commitment.ViewCommitmentViewModel
+﻿@model Kafala.Web.ViewModels.Commitment.ViewCommitmentViewModel
 
 <h2>Commitment Details</h2>
 @using (var form = Html.Bootstrap().BeginForm(VortexSoft.Bootstrap.BootstrapFormType.Horizontal, new {@class= "well" ,id = "autoForm" }))
