--- a/Kafala.Web.UI/Views/Donor/Create.cshtml
+++ b/Kafala.Web.UI/Views/Donor/Create.cshtml
@@ -1,5 +1,4 @@
-﻿@using Foundation.FormBuilder;
-@model Kafala.Web.ViewModels.Donor.CreateDonorViewModel
+﻿@model Kafala.Web.ViewModels.Donor.CreateDonorViewModel
 
 
 <h2>Register a new donor</h2>
