--- a/Kafala.Web.UI/Views/Donor/Index.cshtml
+++ b/Kafala.Web.UI/Views/Donor/Index.cshtml
@@ -12,9 +12,7 @@
 </p>
 <table class="table">
     <tr>
-        <th>
-            Name
-        </th>
+        @Html.SortableHeader(Model.PagingInfo, "Name" , "Name")
         <th>
             Telephone
         </th>
@@ -48,23 +46,8 @@
         </td>
     </tr>
 }
-
-     @using (var modal = Html.Bootstrap().Begin(new Modal(new { id = "confirmDelete" })))
-    {
-        using (var header = modal.BeginHeader())
-        {
-            <button type="button" class="close" data-dismiss="modal">×</button>
-            <h3>Are you sure you want to delete this Donor from the system</h3>
-        }
-        using (var body = modal.BeginBody())
-        {
-            <p>All commitments related to this donor will be removed.</p>
-        }
-        using (var footer = modal.BeginFooter())
-        {
-           
-        }
-    }
-
+    
+ 
     
 </table>
+ @Html.PageLinks(Model.PagingInfo)
