--- a/Kafala.Web.UI/Views/Payment/Index.cshtml
+++ b/Kafala.Web.UI/Views/Payment/Index.cshtml
@@ -7,10 +7,10 @@
 </p>
     <table class="table sorter">
         <tr>
-            @Html.SortableHeader(Model.PagingInfo.Sort, "DonationCaseName", "Donation Case Name", Model.PagingInfo.ActionFunc)
-            @Html.SortableHeader(Model.PagingInfo.Sort, "DonorName", "Donor Name", Model.PagingInfo.ActionFunc)
-            @Html.SortableHeader(Model.PagingInfo.Sort, "PaymentDate", "Payment Date", Model.PagingInfo.ActionFunc)
-            @Html.SortableHeader(Model.PagingInfo.Sort, "PaymentPeriod", "Payment Period", Model.PagingInfo.ActionFunc)
+            @Html.SortableHeader(Model.PagingInfo.Sort, Model.PagingInfo.SortDirection, "DonationCaseName", "Donation Case Name", Model.PagingInfo.ActionFunc)
+            @Html.SortableHeader(Model.PagingInfo.Sort, Model.PagingInfo.SortDirection, "DonorName", "Donor Name", Model.PagingInfo.ActionFunc)
+            @Html.SortableHeader(Model.PagingInfo.Sort, Model.PagingInfo.SortDirection, "PaymentDate", "Payment Date", Model.PagingInfo.ActionFunc)
+            @Html.SortableHeader(Model.PagingInfo.Sort, Model.PagingInfo.SortDirection, "PaymentPeriod", "Payment Period", Model.PagingInfo.ActionFunc)
             <th></th>
         </tr>
     
