--- a/Kafala.Web.UI/Views/Shared/_Layout.cshtml
+++ b/Kafala.Web.UI/Views/Shared/_Layout.cshtml
@@ -43,7 +43,8 @@
         <script src="~/Scripts/jquery-ui-1.10.3.js"></script>
          <script src="~/Scripts/jquery.validate.js"></script>
         <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
-       <script src="~/Scripts/shared.js"></script>
+        <script src="~/Scripts/shared.js"></script>
+        <script src="~/Scripts/stacktrace.js" ></script>
         
     </body>
 </html>
