--- a/Kafala.Web.UI/Views/DonationCase/Index.cshtml
+++ b/Kafala.Web.UI/Views/DonationCase/Index.cshtml
@@ -52,4 +52,4 @@
   
     
 </table>
-@Html.PageLinks(Model.PagingInfo, Model.PagingInfo.ActionFunc)
+@Html.PageLinks(Model.PagingInformationViewModel, Model.PagingInformationViewModel.ActionFunc)
