Refactoring , ajax , paging

--- a/Kafala.Web.UI/Views/PaymentPeriod/Index.cshtml
+++ b/Kafala.Web.UI/Views/PaymentPeriod/Index.cshtml
@@ -38,8 +38,8 @@
                 {
                     Confirm = "Are you sure you want to delete this payment period?",
                     HttpMethod = "Post",
-                    LoadingElementId = "processing-modal",
-                    LoadingElementDuration = 3000
+                    LoadingElementId = "processing-modal"
+                   
                 })
             </td>
         </tr>
