Documentation , code cleansing

--- a/Kafala.Web.UI/Views/Donor/Index.cshtml
+++ b/Kafala.Web.UI/Views/Donor/Index.cshtml
@@ -7,12 +7,17 @@
 
 <h2>Donors</h2>
 
+
+
 <p>
     @Html.ActionLink("Create New", "Create", null, new { @class = "showInPopUpOnClick"
                                                             , data_popup_dismissButtonText = "Dismiss Me"
                                                             , data_popup_hideButtonAndHeader = true
                                                             , data_popup_title = "Donor Creation"})
 </p>
+
+    @Html.Partial("Partial/DonorFilter", Model.DonorFilter)
+
 <table class="table">
     <tr>
         @Html.SortableHeader(Model.PagingInformationViewModel, "Name" , "Name")
