--- a/Kafala.Web.UI/Views/Shared/_Layout.cshtml
+++ b/Kafala.Web.UI/Views/Shared/_Layout.cshtml
@@ -60,7 +60,7 @@
         <script src="~/Scripts/bootstrap.min.js"></script>
         <script src="~/Scripts/jquery-ui-1.10.3.js"></script>
          <script src="~/Scripts/jquery.validate.js"></script>
-        <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
+        <script src="~/Scripts/jquery.Foundation.validate.unobtrusive.js"></script>
         <script src="~/Scripts/shared.js"></script>
         <script src="~/Scripts/stacktrace.js" ></script>
         <script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
