Case sensitive Operator on Dynamic Query

--- a/Kafala.Web.UI/Views/Donor/Index.cshtml
+++ b/Kafala.Web.UI/Views/Donor/Index.cshtml
@@ -11,7 +11,7 @@
 
 <p>
     @Html.ActionLink("Create New", "Create", null, new { @class = "showInPopUpOnClick"
-                                                            , data_popup_dismissButtonText = "Dismiss Me"
+                                                            , data_popup_dismissButtonText = "Dismiss Meww3"
                                                             , data_popup_hideButtonAndHeader = true
                                                             , data_popup_title = "Donor Creation"})
 </p>
