--- a/Kafala.Web.UI/Views/Shared/_DetailsPopUpTemplate.cshtml
+++ b/Kafala.Web.UI/Views/Shared/_DetailsPopUpTemplate.cshtml
@@ -4,13 +4,13 @@
     <div class="modal-content">
       <div class="modal-header" id="detailsModelHeader">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="modal-title" id="detailModelTitle">Modal title</h4>
+        <h4 class="modal-title" id="detailsModelTitle">Modal title</h4>
       </div>
       <div class="modal-body" id="detailModelContent">
         
       </div>
       <div class="modal-footer" id="detailsModelFooter">
-        <button type="button" id="detailModelDismissButton" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" id="detailsModelDismissButton" class="btn btn-default" data-dismiss="modal">Close</button>
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
