--- a/Kafala.Web.UI/Views/Payment/Create.cshtml
+++ b/Kafala.Web.UI/Views/Payment/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model Kafala.Web.ViewModels.Payment.CreatePaymentViewModel
+﻿@using Foundation.FormBuilder.DynamicForm
+@model Kafala.Web.ViewModels.Payment.CreatePaymentViewModel
 
 
 <h2>Register Payment For Donor</h2>
