Non-BootStrap Refactroing : Allow Othery layouts and Generator Families

--- a/Kafala.Web.UI/Views/Commitment/Create.cshtml
+++ b/Kafala.Web.UI/Views/Commitment/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model Kafala.Web.ViewModels.Commitment.CreateCommitmentViewModel
+﻿@using Foundation.FormBuilder.BootStrapSet
+@model Kafala.Web.ViewModels.Commitment.CreateCommitmentViewModel
 
 <h2>Assign Case To Donor</h2>
 @using (var form = Html.Bootstrap().BeginForm(BootstrapFormType.Horizontal, new { @class = "well validated", id = "autoForm" }))
