--- a/Kafala.Web.UI/Views/DonationCase/Edit.cshtml
+++ b/Kafala.Web.UI/Views/DonationCase/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model Kafala.Web.ViewModels.DonationCase.EditDonationCaseViewModel
+﻿@using Foundation.FormBuilder.BootStrapSet
+@model Kafala.Web.ViewModels.DonationCase.EditDonationCaseViewModel
 
 <h2>Edit Donation Case</h2>
 @using (var form = Html.Bootstrap().BeginForm(BootstrapFormType.Horizontal, new {@class= "well" ,id = "autoForm" }))
