--- a/Kafala.Web.UI/Views/Donor/Create.cshtml
+++ b/Kafala.Web.UI/Views/Donor/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model Kafala.Web.ViewModels.Donor.CreateDonorViewModel
+﻿@using Foundation.FormBuilder.BootStrapSet
+@model Kafala.Web.ViewModels.Donor.CreateDonorViewModel
 
 
 <h2>Register a new donor</h2>
