--- a/Kafala.Web.UI/Views/Donor/Edit.cshtml
+++ b/Kafala.Web.UI/Views/Donor/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model Kafala.Web.ViewModels.Donor.DonorUpdateViewModel
+﻿@using Foundation.FormBuilder.BootStrapSet
+@model Kafala.Web.ViewModels.Donor.DonorUpdateViewModel
 
 <h2>Update Donor Details</h2>
 @using (var form = Html.Bootstrap().BeginForm(BootstrapFormType.Horizontal, new {@class= "well" ,id = "autoForm" }))
