--- a/Kafala.Web.UI/Views/PaymentPeriod/Create.cshtml
+++ b/Kafala.Web.UI/Views/PaymentPeriod/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model Kafala.Web.ViewModels.PaymentPeriod.CreatePaymentPeriodViewModel
+﻿@using Foundation.FormBuilder.BootStrapSet
+@model Kafala.Web.ViewModels.PaymentPeriod.CreatePaymentPeriodViewModel
 
 
 <h2>Register Payment For Donor</h2>
