--- a/Kafala.Web.UI/Views/PaymentPeriod/View.cshtml
+++ b/Kafala.Web.UI/Views/PaymentPeriod/View.cshtml
@@ -1,4 +1,5 @@
-﻿@model Kafala.Web.ViewModels.PaymentPeriod.ViewPaymentPeriodViewModel
+﻿@using Foundation.FormBuilder.BootStrapSet
+@model Kafala.Web.ViewModels.PaymentPeriod.ViewPaymentPeriodViewModel
 <h2>Payment Details</h2>
 @using (var form = Html.Bootstrap().BeginForm(BootstrapFormType.Horizontal, new {@class= "well" ,id = "autoForm" }))
 {
