--- a/Kafala.Web.UI/Views/Commitment/Edit.cshtml
+++ b/Kafala.Web.UI/Views/Commitment/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model Kafala.Web.ViewModels.Commitment.EditCommitmentViewModel
+﻿@using Foundation.FormBuilder.BootStrapSet
+@model Kafala.Web.ViewModels.Commitment.EditCommitmentViewModel
 
 <h2>Edit Commmitment Information</h2>
 @using (var form = Html.Bootstrap().BeginForm(BootstrapFormType.Horizontal, new {@class= "well" ,id = "autoForm" }))
