--- a/Kafala.Web.UI/Views/Donor/Partial/DonorFilter.cshtml
+++ b/Kafala.Web.UI/Views/Donor/Partial/DonorFilter.cshtml
@@ -1,4 +1,5 @@
-﻿@model Kafala.Web.ViewModels.Donor.Partial.DonorFilterViewModel
+﻿@using Foundation.FormBuilder.BootStrapSet
+@model Kafala.Web.ViewModels.Donor.Partial.DonorFilterViewModel
     <div class="panel-heading panel-title">Search for donors</div>
   
     <div class="panel-body">
