--- a/Kafala.Web.UI/Views/Donor/View.cshtml
+++ b/Kafala.Web.UI/Views/Donor/View.cshtml
@@ -1,4 +1,5 @@
-﻿@using BootstrapNamedColor = Foundation.Web.BootstrapNamedColor
+﻿@using Foundation.FormBuilder.BootStrapSet
+@using BootstrapNamedColor = Foundation.Web.BootstrapNamedColor
 @model Kafala.Web.ViewModels.Donor.ViewDonorViewModel
 
 <div class="page-header">
@@ -21,8 +22,7 @@
         <div class="row">
              @using (var form = Html.Bootstrap().BeginForm(BootstrapFormType.Vertical, new { @class = "well  well-sm", id = "autoForm" }))
               {
-                    @Html.DynamicView(Foundation.FormBuilder.DynamicForm.BootstrapFormType.Vertical) 
-                            
+                  @Html.DynamicView(BootstrapFormType.Vertical)
               }
         </div>
     </div>
