--- a/Kafala.Web.UI/Views/Payment/Create.cshtml
+++ b/Kafala.Web.UI/Views/Payment/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@using Foundation.FormBuilder.DynamicForm
+﻿@using Foundation.FormBuilder.BootStrapSet
+@using Foundation.FormBuilder.DynamicForm
 @model Kafala.Web.ViewModels.Payment.CreatePaymentViewModel
 
 
