--- a/Kafala.Web.UI/Views/Payment/Edit.cshtml
+++ b/Kafala.Web.UI/Views/Payment/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model Kafala.Web.ViewModels.Payment.EditPaymentViewModel
+﻿@using Foundation.FormBuilder.BootStrapSet
+@model Kafala.Web.ViewModels.Payment.EditPaymentViewModel
 
 <h2>Update Payment Details</h2>
 @using (var form = Html.Bootstrap().BeginForm(BootstrapFormType.Horizontal, new {@class= "well" ,id = "autoForm" }))
