--- a/Kafala.Web.UI/Views/Payment/View.cshtml
+++ b/Kafala.Web.UI/Views/Payment/View.cshtml
@@ -1,4 +1,5 @@
-﻿@using Foundation.FormBuilder.DynamicForm
+﻿@using Foundation.FormBuilder.BootStrapSet
+@using Foundation.FormBuilder.DynamicForm
 @using Foundation.FormBuilder.Extensions
 @model Kafala.Web.ViewModels.Payment.ViewPaymentViewModel
 <h2>Payment Details</h2>
