Allow Generating Single Element

--- a/Kafala.Web.UI/Views/Donor/Partial/DonorFilter.cshtml
+++ b/Kafala.Web.UI/Views/Donor/Partial/DonorFilter.cshtml
@@ -5,6 +5,9 @@
     <div class="panel-body">
         @using (var form = Html.Bootstrap().BeginForm("Index", "Donor", FormMethod.Get, new { id = "autoForm"}))
         {
-            @Html.DynamicForm( renderButtons:false)
+            @Html.DynamicForm( )
+            @Html.DynamicFormElement(x => x.DonorName)
         }
+        
+        
     </div>
